--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -19,6 +19,13 @@
 		<filter-name>charConfig</filter-name>
 		<filter-class>com.cos.blog.config.CharConfig</filter-class>
 	</filter>
+	
+	
+	<filter>
+		<filter-name>forbiddenUrlconfig</filter-name>
+		<filter-class>com.cos.blog.config.ForbiddenUrlconfig</filter-class>
+	</filter> 
+	
 
 
 	<!-- 해당 필터는 모든 필터들 중에서 가장 마지막에 실행되어야 하는 필터 (필터 순서 끝번). -->
@@ -27,5 +34,12 @@
 		<filter-name>charConfig</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	
+	<filter-mapping>
+		<filter-name>forbiddenUrlconfig</filter-name>
+		<url-pattern>*.jsp</url-pattern>
+	</filter-mapping>
+	 
 	
 </web-app>
