--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -26,6 +26,11 @@
 		<filter-class>com.cos.blog.config.ForbiddenUrlconfig</filter-class>
 	</filter> 
 	
+	<!-- <filter>
+		<filter-name>xxsFilter</filter-name>
+		<filter-class>com.cos.blog.filter.XxsFilter</filter-class>
+	</filter>  -->
+	
 
 
 	<!-- 해당 필터는 모든 필터들 중에서 가장 마지막에 실행되어야 하는 필터 (필터 순서 끝번). -->
@@ -40,6 +45,11 @@
 		<filter-name>forbiddenUrlconfig</filter-name>
 		<url-pattern>*.jsp</url-pattern>
 	</filter-mapping>
-	 
+	
+	<!-- <filter-mapping>
+		<filter-name>xxsFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	  -->
 	
 </web-app>
